--- a/pom.xml
+++ b/pom.xml
@@ -43,13 +43,19 @@
             <artifactId>xmldb-api</artifactId>
             <version>1.7.0</version>
         </dependency>
-
         <dependency>
             <groupId>org.exist-db</groupId>
             <artifactId>exist-core</artifactId>
             <version>5.0.0</version>
             <scope>runtime</scope>
         </dependency>
+ 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
   
     </dependencies>
 </project>
