--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,15 @@
             <version>5.0.0</version>
             <scope>runtime</scope>
         </dependency>
- 
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20160810</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.12.3</version>
         </dependency>
 
   
